feat: добавлены тесты