@@ -1,20 +1,25 @@
 package ru.cft.team.filemerge.util;
 
 import lombok.experimental.UtilityClass;
+import lombok.extern.slf4j.Slf4j;
+import ru.cft.team.filemerge.exception.FileDeleteException;
+import ru.cft.team.filemerge.exception.SortingException;
 
-import java.io.FileReader;
-import java.io.FileWriter;
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Function;
+import java.util.stream.IntStream;
 
 import static ru.cft.team.filemerge.util.Constant.*;
 
 @UtilityClass
+@Slf4j
 public class MergeSort {
     public <T extends Comparable<? super T>> void sort(List<String> filePaths, String sortMode,
                                                        Function<String, ? extends T> parser, String outputFilePath) {
@@ -36,13 +41,18 @@ public class MergeSort {
 
             List<T> sortedData = mergeChunks(chunkFilePaths, sortMode, parser);
             writeToFile(sortedData, outputFilePath);
-            System.out.println(sortedData);
 
-            for (String chunkFilePath : chunkFilePaths) {
-                Files.delete(Path.of(chunkFilePath));
-            }
+            chunkFilePaths.forEach(chunkFilePath -> {
+                try {
+                    Files.delete(Paths.get(chunkFilePath));
+                } catch (IOException e) {
+                    throw new FileDeleteException("File deletion error. " + e);
+                }
+            });
+
         } catch (IOException e) {
-            throw new RuntimeException("Ошибка при сортировке файлов.", e);
+            log.error("Error while sorting files.");
+            throw new SortingException("Error while sorting files. " + e);
         }
     }
 
@@ -50,27 +60,17 @@ public class MergeSort {
         return TEMP_DIRECTORY + "temp_chunk_" + index + ".txt";
     }
 
-    private <T> List<T> readAndParseChunks(List<String> filePaths, Function<String, ? extends T> parser) throws IOException {
+    private <T> List<T> readAndParseChunks(List<String> filePaths, Function<String, ? extends T> parser) {
+        Objects.requireNonNull(filePaths, "filePaths cannot null");
+        Objects.requireNonNull(parser, "parser cannot be null");
+
         List<T> data = new ArrayList<>();
-        for (String filePath : filePaths) {
-            try (BufferedReader reader = new BufferedReader(new FileReader(filePath))) {
-                String line;
-                while ((line = reader.readLine()) != null) {
-                    T item = parser.apply(line);
-                    data.add(item);
-                }
-            }
-        }
+        filePaths.forEach(filePath -> data.addAll(CustomFileReader.read(filePath, parser)));
         return data;
     }
 
-    private <T> void writeToFile(List<T> data, String filePath) throws IOException {
-        try (BufferedWriter writer = new BufferedWriter(new FileWriter(filePath))) {
-            for (T item : data) {
-                writer.write(item.toString());
-                writer.newLine();
-            }
-        }
+    private <T> void writeToFile(List<T> data, String filePath) {
+        CustomFileWriter.write(filePath, data);
     }
 
     private <T extends Comparable<? super T>> List<T> mergeChunks(List<String> chunkFilePaths, String sortMode,
@@ -79,7 +79,7 @@ public class MergeSort {
 
         for (int i = 0; i < chunkFilePaths.size(); i++) {
             String chunkFilePath = chunkFilePaths.get(i);
-            BufferedReader reader = new BufferedReader(new FileReader(chunkFilePath));
+            BufferedReader reader = Files.newBufferedReader(Paths.get(chunkFilePath));
             String line = reader.readLine();
             if (line != null) {
                 T item = parser.apply(line);
@@ -91,23 +91,11 @@ public class MergeSort {
 
         List<T> sortedData = new ArrayList<>();
         while (!readers.isEmpty()) {
-            int minIndex = -1;
-            T minValue = null;
-
-            for (int i = 0; i < readers.size(); i++) {
-                IndexedBufferedReader<T> reader = readers.get(i);
-                T currentItem = reader.currentItem;
-                if (currentItem != null && (minIndex == -1 ||
-                        (sortMode.equals(SORT_MODE_ASCENDING) && currentItem.compareTo(minValue) < 0) ||
-                        (sortMode.equals(SORT_MODE_DESCENDING) && currentItem.compareTo(minValue) > 0))) {
-                    minIndex = i;
-                    minValue = currentItem;
-                }
-            }
+            int minIndex = findMinIndex(readers, sortMode);
 
             if (minIndex != -1) {
-                sortedData.add(minValue);
                 IndexedBufferedReader<T> minReader = readers.get(minIndex);
+                sortedData.add(minReader.currentItem);
                 String nextLine = minReader.bufferedReader.readLine();
                 if (nextLine != null) {
                     minReader.currentItem = parser.apply(nextLine);
@@ -127,6 +115,29 @@ public class MergeSort {
 
         return sortedData;
     }
+
+    private <T extends Comparable<? super T>> int findMinIndex(List<IndexedBufferedReader<T>> readers, String sortMode) {
+        return IntStream.range(0, readers.size())
+                .filter(i -> readers.get(i).currentItem != null)
+                .boxed()
+                .min((i1, i2) -> {
+                    IndexedBufferedReader<T> reader1 = readers.get(i1);
+                    IndexedBufferedReader<T> reader2 = readers.get(i2);
+                    T currentItem1 = reader1.currentItem;
+                    T currentItem2 = reader2.currentItem;
+
+                    int compareResult;
+                    if (sortMode.equals(SORT_MODE_ASCENDING)) {
+                        compareResult = currentItem1.compareTo(currentItem2);
+                    } else {
+                        compareResult = currentItem2.compareTo(currentItem1);
+                    }
+
+                    return compareResult;
+                })
+                .orElse(-1);
+    }
+
 }
 
 class IndexedBufferedReader<T> {
